# xmonad-layout-transparent

./: README  xmonad-layout-transparent.cabal
XMonad/Layout/: Transparent.hs
